--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+#  使用缓存图片
+  cached_network_image: ^2.5.1
+
+  #  /用占位符淡入图片
+  transparent_image: ^1.0.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
