--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ltm.flutterui">
    <application
-        android:label="flutterui"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Flutter UI 模型"
+        android:icon="@mipmap/ic_launcher"
+       android:usesCleartextTraffic="true"
+       android:networkSecurityConfig="@xml/network_security_config"
+
+        >
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
